--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=test
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.javax.persistence.validation.mode=auto
+spring.jpa.hibernate.ddl-auto=validate
 #... jpa konfigürasyonu
